--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^17.3.2",
     "expo": "~48.0.9",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
