--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native": "0.71.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-query": "^3.39.3",
     "styled-components": "^5.3.9"
   },
   "devDependencies": {
